# FilterCam_2

./: .gitignore  Readme.md
install/: local_setup.sh  setup.sh
install/velodyne/share/velodyne/: package.sh  (+5 more)
log/: latest_build  latest_list
src/cam_director/: package.xml  setup.cfg  setup.py
src/cam_director/cam_director/: director.py
src/cam_director/launch/: cam_director.launch.py
src/camera_scripts/: snapshot.py
src/camera_scripts/Camera Settings/: AutoSettings.cset
src/camera_scripts/log/: latest_list
src/empty_package/: package.xml  setup.cfg  setup.py
src/filtered_pointcloud_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/filtered_pointcloud_pkg/filtered_pointcloud_pkg/: threshold_node.py
src/filtered_pointcloud_pkg/filtered_pointcloud_pkg/srv/: FilterLimits.srv
src/filtered_pointcloud_pkg/launch/: threshold_launch.launch.py
src/filtered_pointcloud_pkg/srv/: FilterLimits.srv
src/filterwheel/: package.xml  setup.cfg  setup.py
src/filterwheel/filterwheel/: filterwheel_control.py
src/filterwheel/launch/: filterwheel_launch.launch.py
src/liquidlens/: package.xml  setup.cfg  setup.py
src/liquidlens/launch/: liquid_lens_control.launch.py
src/liquidlens/liquidlens/: lens_control.py
src/package_launcher/: package.xml  setup.py
src/package_launcher/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/package_launcher/launch/: launch_packages.launch.py
src/package_launcher/log/: latest_build
src/velodyne_replacment/: HDL32E-velodyne_driver_node-params.yaml  velodyne_driver_node-HDL32E-launch.py
(+224 files in other folders)
